AWS-EKS/Ingress/nginx1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
spec:
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - name: nginx1
          image: stacksimplify/kube-nginxapp1:1.0.0
          resources:
            limits:
              memory: "64Mi"
              cpu: "64m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: nginx1
  ports:
    - port: 80
      targetPort: 80
