AWS-EKS/Ingress/nginx2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
spec:
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
        - name: nginx2
          image: stacksimplify/kube-nginxapp2:1.0.0
          resources:
            limits:
              memory: "64Mi"
              cpu: "64m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
spec:
  type: NodePort
  selector:
    app: nginx2
  ports:
    - port: 80
      targetPort: 80
