AWS-EKS/Ingress/nginx3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx3
spec:
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
        - name: nginx3
          image: stacksimplify/kubenginx:1.0.0
          resources:
            limits:
              memory: "64Mi"
              cpu: "64m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx3
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/index.html"
spec:
  type: NodePort
  selector:
    app: nginx3
  ports:
    - port: 80
      targetPort: 80
