AWS-EKS/Ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-rules
  labels:
    name: nginx-ingress-rules
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "nginx-rules"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-07d5d57234e36f058, subnet-0bf32766ffcbec905, subnet-05a0958f88f3b53cc
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
