AWS-EKS/Ingress/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-context-ssl
  labels:
    name: ingress-context-ssl
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "nginx-ssl"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: "subnet-07d5d57234e36f058, subnet-0bf32766ffcbec905, subnet-05a0958f88f3b53cc"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:142825409430:certificate/073f570f-9641-42a9-b569-3868264b509c"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: albc-ingress-class
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/app1"
            backend:
              service:
                name: nginx1
                port:
                  number: 80
          - pathType: Prefix
            path: "/app2"
            backend:
              service:
                name: nginx2
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx3
                port:
                  number: 80
  defaultBackend:
    service:
      name: nginx3
      port:
        number: 80
